# Accumulate

./: README.md  io.github.atrophaneura.accumulate.json  meson.build  requirements.txt
.github/workflows/: flatpak.yml
accumulate/: accumulate.in  client.py  constants.py.in  main.py  meson.build  window.py
build-aux/flatpak/: com.github.Atrophaneura.Accumulate.Devel.json  com.github.Atrophaneura.Accumulate.json  com.github.Atrophaneura.AccumulateDevel.json
data/: accumulate.gresource.xml  com.github.Atrophaneura.Accumulate.appdata.xml.in.in  com.github.Atrophaneura.Accumulate.desktop.in.in  com.github.Atrophaneura.Accumulate.gschema.xml.in  io.github.Atrophaneura.Accumulate.appdata.xml.in.in  io.github.Atrophaneura.Accumulate.desktop.in.in  io.github.Atrophaneura.Accumulate.gschema.xml.in  io.github.atrophaneura.accumulate.appdata.xml.in  io.github.atrophaneura.accumulate.desktop.in  io.github.atrophaneura.accumulate.gschema.xml  meson.build
data/icons/: meson.build
data/ui/: window.blp
po/: POTFILES  meson.build
src/: accumulate.gresource.xml  accumulate.in  main.py  meson.build  window.py  window.ui
